Squash all *kinds* of bugs.

--- a/ui/index.scss
+++ b/ui/index.scss
@@ -90,55 +90,78 @@ main {
       padding: 0;
       margin: 0;
     }
-    .row {
+  }
+}
+main .scroller {
+  .row {
+    display: flex;
+    height: 20vw; // hack. WHY????
+    width: 100vw;
+    .item {
       display: flex;
-      height: 20vw; // hack. WHY????
-      width: 100vw;
-      .item {
-        display: flex;
-        flex: 1;
-        min-width: 20vw;
-        max-width: 20vw;
-        height: 20vw;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        position: relative;
-        .char {
-          cursor: pointer;
-          -webkit-user-select: none;
-          min-height: 8vw;
-          font-size:  8vw;
-          font-family: sans-serif;
-          width: 100%;
-          text-align: center;
-          &:hover ~ .note {
-            opacity: 1;
-          }
-        }
-        .code {
-          margin-top: 1vw;
-          font-size: 1vw;
-          font-family: monospace;
-          pointer-events: none;
-          -webkit-user-select: none;
-        }
-        .note {
-          background: transparentize(black, 0.5);
-          color: white;
-          border-radius: 0.75vw;
-          padding: 0.5vw;
-          width: 50%;
-          text-align: center;
-          pointer-events: none;
-          opacity: 0;
-          transition: opacity 0.2s;
-          order: -1;
-          margin-bottom: -1em - (1/8) - 0.5;
-          z-index: 1;
-          font-size: 1.75vw;
+      flex: 1;
+      min-width: 20vw;
+      max-width: 20vw;
+      height: 20vw;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      position: relative;
+      .char {
+        cursor: pointer;
+        -webkit-user-select: none;
+        min-height: 8vw;
+        font-size:  8vw;
+        font-family: sans-serif;
+        width: 100%;
+        text-align: center;
+        &:hover ~ .note {
+          opacity: 1;
         }
       }
+      .code {
+        margin-top: 1vw;
+        font-size: 1vw;
+        font-family: monospace;
+        pointer-events: none;
+        -webkit-user-select: none;
+      }
+      .note {
+        background: transparentize(black, 0.5);
+        color: white;
+        border-radius: 0.75vw;
+        padding: 0.5vw;
+        width: 50%;
+        text-align: center;
+        pointer-events: none;
+        opacity: 0;
+        transition: opacity 0.2s;
+        order: -1;
+        margin-bottom: -1em - (1/8) - 0.5;
+        z-index: 1;
+        font-size: 1.75vw;
+      }
+    }
+  }
+}
+
+.search-results .item {
+  display: flex;
+  align-items: center;
+  height: 15vh;
+
+  .char {
+    font-size: 15vh;
+    margin: 0 1em;
+  }
+  .code {
+    font-family: monospace;
+
+    &::before {
+      content: '(';
+    }
+    &::after {
+      content: ')';
     }
   }
 }
